[tool.poetry]
name = "qklearn"
version = "0.1.0"
description = "Library for data science in quantitative finance & timeseries."
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent"
]
authors = ["DeeptradeX"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.6, <4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
pre-commit = "^2.0"
isort = "^5.6.4"
pylint = "^2.6.0"
flake8 = "^3.8.4"
